--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <title>Importaciones</title>
     <link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all.css">
     <link rel="stylesheet" type="text/css" href="css/imp_style.css">
-    <link rel="stylesheet" type="text/css" href="extjs/src/ux/grid/css/GridFilters.css">
-    <script type="text/javascript" src="extjs/ext-debug.js"></script>
+    <script type="text/javascript" src="extjs/ext-all-debug.js"></script>
     <script type="text/javascript" src="extjs/pkgs/classes.js"></script>
     <script type="text/javascript">
         
