--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         Conf.pageSize = 200;
         Conf.dateFormat = 'Y-m-d'; //'Y-m-d H:i:s';
         
-        var locale = Ext.util.Cookies.get("IMP-LANG") != null ? Ext.util.Cookies.get("IMP-LANG") : 'en',
+        var locale = Ext.util.Cookies.get("IMP-LANG") != null ? Ext.util.Cookies.get("IMP-LANG") : 'es',
             head = document.getElementsByTagName("head")[0];
         
 
